#movie-seat final

--- a/movie-seat-booking/style.css
+++ b/movie-seat-booking/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #242333;
+  background-color: #3a603e;
   color: #fff;
   display: flex;
   flex-direction: column;
