--- a/memory-cards/style.css
+++ b/memory-cards/style.css
@@ -105,6 +105,7 @@ h1 button {
   top: 0;
   left: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
